--- a/Ecoleta/index.html
+++ b/Ecoleta/index.html
@@ -10,6 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap" rel="stylesheet"> 
 
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/home.css">
+
+    <link rel="stylesheet" href="styles/responsive.css">
 
 </head>
 
@@ -22,7 +25,7 @@
             <header>
                 <img src="icones/logo.svg" alt="Logomarca">
 
-                <a href="#">
+                <a href="create-point.html">
                     <span></span>
                     Cadastre um ponto de coleta
                 </a>
