--- a/Ecoleta/create-point.html
+++ b/Ecoleta/create-point.html
@@ -41,18 +41,18 @@
 
                 <div class="field">
                     <label for="name">Nome da entidade</label>
-                    <input type="text" name="name">
+                    <input type="text" name="name" required>
                 </div>
 
                 <div class="field-group">
                     <div class="field">
                         <label for="address">Endereço</label>
-                        <input type="text" name="address">
+                        <input type="text" name="address" required>
                     </div>
 
                     <div class="field">
                         <label for="address2">Número</label>
-                        <input type="text" name="address2">
+                        <input type="text" name="address2" required>
                     </div>
                 </div>
 
@@ -64,12 +64,12 @@
                             <option value="">Selecione o estado</option>
                         </select>
 
-                        <input type="hidden" name="state">
+                        <input type="hidden" name="state" required>
                     </div>
 
                     <div class="field">
                         <label for="city">Cidade</label>
-                        <select name="city" id="" disabled>
+                        <select name="city" id="" disabled required>
                             <option value="">Selecione uma cidade</option>
                         </select>
                     </div>
@@ -80,13 +80,59 @@
 
             <fieldset>
                 <legend>
-                    <h2>Itens de coleta</h2>
+                    <h2>Ítens de coleta</h2>
                 </legend>
+
+                <div class="items-grid">
+                    <li data-id="1">
+                        <img src="icones/lampadas.svg" alt="Lâmpadas">
+                        <span>
+                            Lâmpadas
+                        </span>
+                    </li>
+
+                    <li data-id="2">
+                        <img src="icones/baterias.svg" alt="Pilhas e baterias">
+                        <span>
+                            Pilhas e baterias
+                        </span>
+                    </li>
+
+                    <li data-id="3">
+                        <img src="icones/papeis-papelao.svg" alt="Papéis e papelão">
+                        <span>
+                            Papéis e papelão
+                        </span>
+                    </li>
+
+                    <li data-id="4">
+                        <img src="icones/eletronicos.svg" alt="Resíduos eletrônicos">
+                        <span>
+                            Resíduos eletrônicos
+                        </span>
+                    </li>
+
+                    <li data-id="5">
+                        <img src="icones/organicos.svg" alt="Resíduos Orgânicos">
+                        <span>
+                            Resíduos Orgânicos
+                        </span>
+                    </li>
+
+                    <li data-id="6">
+                        <img src="icones/oleo.svg" alt="Óleo de cozinha">
+                        <span>
+                            Óleo de cozinha
+                        </span>
+                    </li>
+                </div>
+
+                <input type="hidden" name="items">
 
             </fieldset>
 
             <div class="button"><button type="submit">Cadastrar ponto de coleta</button></div>
-            
+
 
         </form>
 
