--- a/Ecoleta/index.html
+++ b/Ecoleta/index.html
@@ -11,8 +11,11 @@
 
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="styles/modal.css">
 
     <link rel="stylesheet" href="styles/responsive.css">
+
+    
 
 </head>
 
@@ -43,6 +46,26 @@
         </div>
 
     </div>
+
+    <div id="modal" class="hide">
+        <div class="content">
+            <div class="header">
+                <h1>
+                    Pontos de Coleta
+                </h1>
+                <a href="#">Fechar</a>
+            </div>
+            <form action="search.html">
+                <label for="search">Cidade</label>
+                <div class="search field">
+                    <input type="text" name="search" placeholder="Pesquisa por uma cidade">
+                    <button><img src="/Ecoleta/icones/search.svg" alt="Buscar"></button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <script src="scripts/index.js"></script>
 
 </body>
 
